// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverItem snapshots should render PopoverItem 1`] = `
<DocumentFragment>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral1"
      data-test-icon="align-horizontal-center"
      height="12"
      name="AlignHorizontalCenter"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      text
    </small>
  </div>
</DocumentFragment>
`;

exports[`PopoverItem snapshots should render not visible 1`] = `<DocumentFragment />`;

exports[`PopoverItem snapshots should render selected 1`] = `
<DocumentFragment>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral1"
      data-test-icon="align-horizontal-center"
      height="12"
      name="AlignHorizontalCenter"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      text
    </small>
  </div>
</DocumentFragment>
`;
